Fix issue with overflow on actions panel.

--- a/public/css/components.css
+++ b/public/css/components.css
@@ -1,3 +1,23 @@
+#left-panel{
+	/*background-color: #75b540;*/
+	background-color: #38882f;
+	color: white;
+	height: 100%;
+	overflow: auto;
+	white-space: nowrap;
+}
+
+#right-panel{
+	/*background-color: #75b540;*/
+	background-color: #bbbbbb;
+	color: #000033;
+	height: 100%;
+	overflow-y: auto;
+	overflow-x: hidden;
+}
+
+
+
 #classification-treeview ul{
 	padding-inline-start: 0px;
 }
