--- a/public/css/gilbyim.css
+++ b/public/css/gilbyim.css
@@ -36,12 +36,11 @@ code {
 }
 
 #left-panel{
-	/*background-color: #75b540;*/
 	background-color: #38882f;
-	color: white;
-	height: 100%;
-	overflow: auto;
-	white-space: nowrap;
+}
+
+#right-panel{
+	background-color: #bbbbbb;
 }
 
 .footer {
